--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -46,11 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\ConsoleSender.cs" />
+    <Compile Include="Commands\Sender.cs" />
+    <Compile Include="Events\PlayerCommand.cs" />
     <Compile Include="Chest.cs" />
     <Compile Include="ClientSock.cs" />
     <Compile Include="Collision.cs" />
     <Compile Include="Color.cs" />
+    <Compile Include="Commands\Command.cs" />
+    <Compile Include="Commands\CommandParser.cs" />
     <Compile Include="Dust.cs" />
+    <Compile Include="Events\ConsoleCommand.cs" />
+    <Compile Include="Events\Event.cs" />
     <Compile Include="Gore.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Liquid.cs" />
@@ -60,8 +67,13 @@
     <Compile Include="NetPlay.cs" />
     <Compile Include="NPC.cs" />
     <Compile Include="Player.cs" />
+    <Compile Include="Plugin\Hooks.cs" />
+    <Compile Include="Plugin\Plugin.cs" />
+    <Compile Include="Plugin\PluginManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Projectile.cs" />
+    <Compile Include="Properties.cs" />
+    <Compile Include="PropertiesFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Recipe.cs" />
     <Compile Include="Rectangle.cs" />
@@ -77,6 +89,7 @@
   <ItemGroup>
     <None Include="app.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
