--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Terraria_Server</RootNamespace>
     <AssemblyName>Terraria_Server</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -52,7 +52,7 @@
     <Compile Include="Events\LogoutEvent.cs" />
     <Compile Include="Events\PartyChangeEvent.cs" />
     <Compile Include="Events\PlayerChatEvent.cs" />
-    <Compile Include="Events\PlayerCommand.cs" />
+    <Compile Include="Events\PlayerCommandEvent.cs" />
     <Compile Include="Chest.cs" />
     <Compile Include="ClientSock.cs" />
     <Compile Include="Collision.cs" />
@@ -60,8 +60,9 @@
     <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\CommandParser.cs" />
     <Compile Include="Dust.cs" />
-    <Compile Include="Events\ConsoleCommand.cs" />
+    <Compile Include="Events\ConsoleCommandEvent.cs" />
     <Compile Include="Events\Event.cs" />
+    <Compile Include="Events\TileChangeEvent.cs" />
     <Compile Include="Gore.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Liquid.cs" />
