Added Example Plugin, and updated a few files.

--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -62,7 +62,7 @@
     <Compile Include="Dust.cs" />
     <Compile Include="Events\ConsoleCommandEvent.cs" />
     <Compile Include="Events\Event.cs" />
-    <Compile Include="Events\TileChangeEvent.cs" />
+    <Compile Include="Events\TileBreakEvent.cs" />
     <Compile Include="Gore.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Liquid.cs" />
