Modified Commands, Added onPlayerHurt & Hooks.PLAYER_HURT hook

--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Dust.cs" />
     <Compile Include="Events\ConsoleCommandEvent.cs" />
     <Compile Include="Events\Event.cs" />
+    <Compile Include="Events\PlayerHurtEvent.cs" />
     <Compile Include="Events\TileBreakEvent.cs" />
     <Compile Include="Gore.cs" />
     <Compile Include="Item.cs" />
