Switched around Player.sendMessage to Sender's; Replaced Terraria's ban method with my own...and actually implemented it *oops. Also added get/setIPAddress to Player, Kick and getSocket.

--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -11,8 +11,7 @@
     <RootNamespace>Terraria_Server</RootNamespace>
     <AssemblyName>Terraria_Server</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
