--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Commands\ConsoleSender.cs" />
     <Compile Include="Commands\Sender.cs" />
+    <Compile Include="Events\ChestOpenEvent.cs" />
     <Compile Include="Events\LoginEvent.cs" />
     <Compile Include="Events\LogoutEvent.cs" />
     <Compile Include="Events\PartyChangeEvent.cs" />
