--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Server.cs" />
     <Compile Include="ServerSock.cs" />
     <Compile Include="Server\Packet.cs" />
+    <Compile Include="Server\TConsole.cs" />
     <Compile Include="Sign.cs" />
     <Compile Include="Statics.cs" />
     <Compile Include="Tile.cs" />
