--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -87,21 +87,21 @@
     <Compile Include="Plugin\PluginManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Projectile.cs" />
-    <Compile Include="ServerProperties.cs" />
-    <Compile Include="PropertiesFile.cs" />
+    <Compile Include="Server\ServerProperties.cs" />
+    <Compile Include="Misc\PropertiesFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Recipe.cs" />
     <Compile Include="Rectangle.cs" />
-    <Compile Include="Server.cs" />
+    <Compile Include="Server\Server.cs" />
     <Compile Include="ServerSock.cs" />
     <Compile Include="Server\Packet.cs" />
     <Compile Include="Server\TConsole.cs" />
     <Compile Include="Sign.cs" />
     <Compile Include="Statics.cs" />
     <Compile Include="Tile.cs" />
-    <Compile Include="Vector2.cs" />
-    <Compile Include="DataRegister.cs" />
-    <Compile Include="World.cs" />
+    <Compile Include="Misc\Vector2.cs" />
+    <Compile Include="Misc\DataRegister.cs" />
+    <Compile Include="Server\World.cs" />
     <Compile Include="WorldGen.cs" />
   </ItemGroup>
   <ItemGroup>
