--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -23,6 +23,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -32,6 +34,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>Terraria_Server.Program</StartupObject>
@@ -97,7 +101,7 @@
     <Compile Include="Server\Packet.cs" />
     <Compile Include="Server\TConsole.cs" />
     <Compile Include="Sign.cs" />
-    <Compile Include="Statics.cs" />
+    <Compile Include="Server\Statics.cs" />
     <Compile Include="Tile.cs" />
     <Compile Include="Misc\Vector2.cs" />
     <Compile Include="Misc\DataRegister.cs" />
