--- a/TDSMPlugin/TDSMPlugin/TDSMPlugin.csproj
+++ b/TDSMPlugin/TDSMPlugin/TDSMPlugin.csproj
@@ -38,9 +38,7 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Terraria_Server, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <ExecutableExtension>.exe</ExecutableExtension>
+    <Reference Include="Terraria_Server">
       <HintPath>..\..\Terraria_Server\bin\Debug\Terraria_Server.exe</HintPath>
     </Reference>
   </ItemGroup>
