--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Chest.cs" />
     <Compile Include="ClientSock.cs" />
     <Compile Include="Collision.cs" />
+    <Compile Include="Events\PlayerDeathEvent.cs" />
     <Compile Include="Misc\Color.cs" />
     <Compile Include="Commands\Command.cs" />
     <Compile Include="Commands\CommandParser.cs" />
