Cleaned up code base. Removed a significant amount of unnecessary code and comments. Also converted a large amount of Java style gets and sets to .Net auto properties.

--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -104,6 +104,7 @@
   <ItemGroup>
     <Compile Include="Commands\ConsoleSender.cs" />
     <Compile Include="Commands\Sender.cs" />
+    <Compile Include="Events\BasePlayerEvent.cs" />
     <Compile Include="Events\ChestOpenEvent.cs" />
     <Compile Include="Events\LoginEvent.cs" />
     <Compile Include="Events\LogoutEvent.cs" />
