--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -102,8 +102,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Items\Item.cs" />
+    <Compile Include="Items\ItemRepository.cs" />
+    <Compile Include="Items\Items.cs" />
+    <Compile Include="Shops\ArmsDealerShop.cs" />
+    <Compile Include="Shops\ClothierShop.cs" />
     <Compile Include="Commands\ConsoleSender.cs" />
     <Compile Include="Commands\Sender.cs" />
+    <Compile Include="Shops\DemolitionistShop.cs" />
+    <Compile Include="Shops\DryadShop.cs" />
     <Compile Include="Events\BasePlayerEvent.cs" />
     <Compile Include="Events\ChestOpenEvent.cs" />
     <Compile Include="Events\LoginEvent.cs" />
@@ -111,10 +118,11 @@
     <Compile Include="Events\PartyChangeEvent.cs" />
     <Compile Include="Events\PlayerChatEvent.cs" />
     <Compile Include="Events\PlayerCommandEvent.cs" />
-    <Compile Include="Chest.cs" />
+    <Compile Include="Shops\Chest.cs" />
     <Compile Include="ClientSock.cs" />
     <Compile Include="Collision.cs" />
     <Compile Include="Events\PlayerDeathEvent.cs" />
+    <Compile Include="Shops\MerchantShop.cs" />
     <Compile Include="Misc\Color.cs" />
     <Compile Include="Commands\Commands.cs" />
     <Compile Include="Commands\CommandParser.cs" />
@@ -151,6 +159,7 @@
     <Compile Include="Server\Packet.cs" />
     <Compile Include="Server\TConsole.cs" />
     <Compile Include="Server\UpdateManager.cs" />
+    <Compile Include="Shops\Shop.cs" />
     <Compile Include="Sign.cs" />
     <Compile Include="Server\Statics.cs" />
     <Compile Include="Tile.cs" />
@@ -178,6 +187,11 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Items.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
