--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Commands\ConsoleSender.cs" />
     <Compile Include="Commands\Sender.cs" />
     <Compile Include="Events\ChestOpenEvent.cs" />
+    <Compile Include="Events\DoorStateChangeEvent.cs" />
     <Compile Include="Events\LoginEvent.cs" />
     <Compile Include="Events\LogoutEvent.cs" />
     <Compile Include="Events\PartyChangeEvent.cs" />
@@ -133,6 +134,7 @@
     <Compile Include="Netplay.cs" />
     <Compile Include="NPC.cs" />
     <Compile Include="Player.cs" />
+    <Compile Include="Plugin\DoorOpener.cs" />
     <Compile Include="Plugin\Hooks.cs" />
     <Compile Include="Plugin\Party.cs" />
     <Compile Include="Plugin\Plugin.cs" />
