--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -106,6 +106,46 @@
     <Compile Include="Items\Item.cs" />
     <Compile Include="Items\ItemRepository.cs" />
     <Compile Include="Items\Items.cs" />
+    <Compile Include="Messages\ChestItemMessage.cs" />
+    <Compile Include="Messages\ConnectionRequestMessage.cs" />
+    <Compile Include="Messages\ConnectionResponseMessage.cs" />
+    <Compile Include="Messages\DamageNPCMessage.cs" />
+    <Compile Include="Messages\DisconnectMessage.cs" />
+    <Compile Include="Messages\DoorUpdateMessage.cs" />
+    <Compile Include="Messages\IMessage.cs" />
+    <Compile Include="Messages\InventoryDataMessage.cs" />
+    <Compile Include="Messages\ItemInfoMessage.cs" />
+    <Compile Include="Messages\ItemOwnerInfoMessage.cs" />
+    <Compile Include="Messages\ItemOwnerUpdateMessage.cs" />
+    <Compile Include="Messages\KillProjectileMessage.cs" />
+    <Compile Include="Messages\NPCInfoMessage.cs" />
+    <Compile Include="Messages\NPCTalkMessage.cs" />
+    <Compile Include="Messages\OpenChestMessage.cs" />
+    <Compile Include="Messages\PasswordRequestMessage.cs" />
+    <Compile Include="Messages\PasswordResponseMessage.cs" />
+    <Compile Include="Messages\PlayerBallswingMessage.cs" />
+    <Compile Include="Messages\PlayerChatMessage.cs" />
+    <Compile Include="Messages\PlayerChestUpdate.cs" />
+    <Compile Include="Messages\PlayerDataMessage.cs" />
+    <Compile Include="Messages\PlayerHealthUpdateMessage.cs" />
+    <Compile Include="Messages\PlayerManaUpdateMessage.cs" />
+    <Compile Include="Messages\PlayerPvPChangeMessage.cs" />
+    <Compile Include="Messages\PlayerStateUpdateMessage.cs" />
+    <Compile Include="Messages\ProjectileMessage.cs" />
+    <Compile Include="Messages\ReceivingPlayerJoinedMessage.cs" />
+    <Compile Include="Messages\RequestTileMessage.cs" />
+    <Compile Include="Messages\SendSpawn.cs" />
+    <Compile Include="Messages\SendTileLoadingMessage.cs" />
+    <Compile Include="Messages\SendTileLoadingRequestMessage.cs" />
+    <Compile Include="Messages\SendTileResponseMessage.cs" />
+    <Compile Include="Messages\StrikeNPCMessage.cs" />
+    <Compile Include="Messages\StrikePlayerMessage.cs" />
+    <Compile Include="Messages\SynchBeginMessage.cs" />
+    <Compile Include="Messages\TileBreakMessage.cs" />
+    <Compile Include="Messages\TileSquareMessage.cs" />
+    <Compile Include="Messages\UpdatePlayersMessage.cs" />
+    <Compile Include="Messages\WorldDataMessage.cs" />
+    <Compile Include="Messages\WorldRequestMessage.cs" />
     <Compile Include="Shops\ArmsDealerShop.cs" />
     <Compile Include="Shops\ClothierShop.cs" />
     <Compile Include="Commands\ConsoleSender.cs" />
