--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -109,26 +109,35 @@
     <Compile Include="Messages\DamageNPCMessage.cs" />
     <Compile Include="Messages\DisconnectMessage.cs" />
     <Compile Include="Messages\DoorUpdateMessage.cs" />
+    <Compile Include="Messages\EnterZoneMessage.cs" />
+    <Compile Include="Messages\FlowLiquidMessage.cs" />
+    <Compile Include="Messages\HealMessage.cs" />
     <Compile Include="Messages\IMessage.cs" />
     <Compile Include="Messages\InventoryDataMessage.cs" />
     <Compile Include="Messages\ItemInfoMessage.cs" />
     <Compile Include="Messages\ItemOwnerInfoMessage.cs" />
     <Compile Include="Messages\ItemOwnerUpdateMessage.cs" />
+    <Compile Include="Messages\KillPlayerPvPMessage.cs" />
     <Compile Include="Messages\KillProjectileMessage.cs" />
+    <Compile Include="Messages\KillTileMessage.cs" />
     <Compile Include="Messages\NPCInfoMessage.cs" />
     <Compile Include="Messages\NPCTalkMessage.cs" />
     <Compile Include="Messages\OpenChestMessage.cs" />
     <Compile Include="Messages\PasswordRequestMessage.cs" />
     <Compile Include="Messages\PasswordResponseMessage.cs" />
     <Compile Include="Messages\PlayerBallswingMessage.cs" />
+    <Compile Include="Messages\PlayerBuffsMessage.cs" />
     <Compile Include="Messages\PlayerChatMessage.cs" />
     <Compile Include="Messages\PlayerChestUpdate.cs" />
     <Compile Include="Messages\PlayerDataMessage.cs" />
     <Compile Include="Messages\PlayerHealthUpdateMessage.cs" />
+    <Compile Include="Messages\PlayerJoinPartyMessage.cs" />
     <Compile Include="Messages\PlayerManaUpdateMessage.cs" />
     <Compile Include="Messages\PlayerPvPChangeMessage.cs" />
     <Compile Include="Messages\PlayerStateUpdateMessage.cs" />
+    <Compile Include="Messages\PlayerUseManaUpdateMessage.cs" />
     <Compile Include="Messages\ProjectileMessage.cs" />
+    <Compile Include="Messages\ReadSignMessage.cs" />
     <Compile Include="Messages\ReceivingPlayerJoinedMessage.cs" />
     <Compile Include="Messages\RequestTileMessage.cs" />
     <Compile Include="Messages\SendSpawn.cs" />
@@ -137,12 +146,14 @@
     <Compile Include="Messages\SendTileResponseMessage.cs" />
     <Compile Include="Messages\StrikeNPCMessage.cs" />
     <Compile Include="Messages\StrikePlayerMessage.cs" />
+    <Compile Include="Messages\SummonSkeletronMessage.cs" />
     <Compile Include="Messages\SynchBeginMessage.cs" />
     <Compile Include="Messages\TileBreakMessage.cs" />
     <Compile Include="Messages\TileSquareMessage.cs" />
     <Compile Include="Messages\UpdatePlayersMessage.cs" />
     <Compile Include="Messages\WorldDataMessage.cs" />
     <Compile Include="Messages\WorldRequestMessage.cs" />
+    <Compile Include="Messages\WriteSignMessage.cs" />
     <Compile Include="Shops\ArmsDealerShop.cs" />
     <Compile Include="Shops\ClothierShop.cs" />
     <Compile Include="Commands\ConsoleSender.cs" />
