Added 3 New Events

--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -110,6 +110,10 @@
   <ItemGroup>
     <Compile Include="Events\MessageEvent.cs" />
     <Compile Include="Events\NPCDeathEvent.cs" />
+    <Compile Include="Events\NPCSpawnEvent.cs" />
+    <Compile Include="Events\PlayerKeyPressEvent.cs" />
+    <Compile Include="Events\PlayerMoveEvent.cs" />
+    <Compile Include="Events\PlayerTeleportEvent.cs" />
     <Compile Include="Messages\ChestItemMessage.cs" />
     <Compile Include="Messages\ConnectionRequestMessage.cs" />
     <Compile Include="Messages\ConnectionResponseMessage.cs" />
@@ -161,6 +165,7 @@
     <Compile Include="Messages\WorldDataMessage.cs" />
     <Compile Include="Messages\WorldRequestMessage.cs" />
     <Compile Include="Messages\WriteSignMessage.cs" />
+    <Compile Include="Plugin\Key.cs" />
     <Compile Include="Shops\ArmsDealerShop.cs" />
     <Compile Include="Shops\ClothierShop.cs" />
     <Compile Include="Commands\ConsoleSender.cs" />
