--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /Terraria_Server/bin/Release/Terraria_Server.exe
 /Terraria_Server/bin/Release/Terraria_Server.exe.config
 /Terraria_Server/bin/Release/Terraria_Server.pdb
+/Terraria_Server/bin
