Fixed Sign Event, Added Saving catches, Removed Un-Fired sign Event (NPC?), Added Save Timer, Added more TileChange Properties {Break, Place, Wall, Block}

--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -168,6 +168,8 @@
     <Compile Include="Messages\WorldRequestMessage.cs" />
     <Compile Include="Messages\WriteSignMessage.cs" />
     <Compile Include="Plugin\Key.cs" />
+    <Compile Include="Plugin\Tile\TileAction.cs" />
+    <Compile Include="Plugin\Tile\TileType.cs" />
     <Compile Include="Shops\ArmsDealerShop.cs" />
     <Compile Include="Shops\ClothierShop.cs" />
     <Compile Include="Commands\ConsoleSender.cs" />
