--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -111,7 +111,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ProjectileType.cs" />    <Compile Include="Collections\IRegisterableEntity.cs" />
+    <Compile Include="Definitions\ProjectileType.cs" />
+    <Compile Include="Collections\IRegisterableEntity.cs" />
     <Compile Include="Collections\NPCRegistry.cs" />
     <Compile Include="Events\MessageEvent.cs" />
     <Compile Include="Events\NPCDeathEvent.cs" />
@@ -170,9 +171,9 @@
     <Compile Include="Messages\WorldDataMessage.cs" />
     <Compile Include="Messages\WorldRequestMessage.cs" />
     <Compile Include="Messages\WriteSignMessage.cs" />
-    <Compile Include="Plugin\Key.cs" />
-    <Compile Include="Plugin\Tile\TileAction.cs" />
-    <Compile Include="Plugin\Tile\TileType.cs" />
+    <Compile Include="Definitions\Key.cs" />
+    <Compile Include="Definitions\Tile\TileAction.cs" />
+    <Compile Include="Definitions\Tile\TileType.cs" />
     <Compile Include="Collections\Registry.cs" />
     <Compile Include="Shops\ArmsDealerShop.cs" />
     <Compile Include="Shops\ClothierShop.cs" />
@@ -213,14 +214,14 @@
     <Compile Include="Netplay.cs" />
     <Compile Include="NPC.cs" />
     <Compile Include="Player.cs" />
-    <Compile Include="Plugin\DoorOpener.cs" />
+    <Compile Include="Definitions\DoorOpener.cs" />
     <Compile Include="Plugin\Hooks.cs" />
     <Compile Include="Plugin\Party.cs" />
     <Compile Include="Plugin\Plugin.cs" />
     <Compile Include="Plugin\PluginManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Projectile.cs" />
-    <Compile Include="Server\Platform.cs" />
+    <Compile Include="Definitions\Platform.cs" />
     <Compile Include="Server\ServerProperties.cs" />
     <Compile Include="Misc\PropertiesFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -261,7 +262,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="NPCs.xml">
+    <Content Include="Definitions\NPCs.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
