Rewrote ServerLoop to use Select instead of threads. Renamed ServerSocks to ServerSlots and cleaned them up a bit. Added a "slots" command. Removed some client code.

--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -11,8 +11,6 @@
     <RootNamespace>Terraria_Server</RootNamespace>
     <AssemblyName>Terraria_Server</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
@@ -38,7 +36,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
-    <DebugType>Full</DebugType>
+    <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
@@ -46,6 +44,10 @@
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>
     </DocumentationFile>
+    <RegisterForComInterop>False</RegisterForComInterop>
+    <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
+    <BaseAddress>4194304</BaseAddress>
+    <Externalconsole>true</Externalconsole>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -56,6 +58,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile />
+    <RegisterForComInterop>False</RegisterForComInterop>
+    <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
+    <BaseAddress>4194304</BaseAddress>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>Terraria_Server.Program</StartupObject>
@@ -65,9 +70,6 @@
   </PropertyGroup>
   <PropertyGroup>
     <SignManifests>false</SignManifests>
-  </PropertyGroup>
-  <PropertyGroup>
-    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>2BE6936C0197F522CA29B15CDAC2482A3B4C81B9</ManifestCertificateThumbprint>
@@ -186,7 +188,6 @@
     <Compile Include="Events\PartyChangeEvent.cs" />
     <Compile Include="Events\PlayerCommandEvent.cs" />
     <Compile Include="Shops\Chest.cs" />
-    <Compile Include="ClientSock.cs" />
     <Compile Include="Collision.cs" />
     <Compile Include="Events\PlayerDeathEvent.cs" />
     <Compile Include="Events\PlayerProjectileEvent.cs" />
@@ -205,9 +206,7 @@
     <Compile Include="Liquid.cs" />
     <Compile Include="LiquidBuffer.cs" />
     <Compile Include="Main.cs" />
-    <Compile Include="Messages\MessageBuffer.cs" />
     <Compile Include="NetMessage.cs" />
-    <Compile Include="Netplay.cs" />
     <Compile Include="NPC.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Plugin\DoorOpener.cs" />
@@ -224,7 +223,6 @@
     <Compile Include="Recipe.cs" />
     <Compile Include="Rectangle.cs" />
     <Compile Include="Server\Server.cs" />
-    <Compile Include="ServerSock.cs" />
     <Compile Include="Server\Packet.cs" />
     <Compile Include="Server\TConsole.cs" />
     <Compile Include="Server\UpdateManager.cs" />
@@ -236,6 +234,9 @@
     <Compile Include="Misc\DataRegister.cs" />
     <Compile Include="Server\World.cs" />
     <Compile Include="WorldGen.cs" />
+    <Compile Include="Messages\messageBuffer.cs" />
+    <Compile Include="NetPlay.cs" />
+    <Compile Include="ServerSlot.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
