Items are now deserialized from 2 xml files. One is like what is used for NPCs, while the other is a workaround because types cannot be used as unique identifiers.
Fixed a bug that was preventing generated worlds from saving correctly.

Minor changes to the serializer for future usage.

--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -112,7 +112,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collections\IRegisterableEntity.cs" />
-    <Compile Include="Collections\NPCRegistry.cs" />
+    <Compile Include="Collections\ISetDefaults.cs" />
+    <Compile Include="Collections\ItemRegistry.cs" />
+    <Compile Include="Collections\Registries.cs" />
     <Compile Include="Events\MessageEvent.cs" />
     <Compile Include="Events\NPCDeathEvent.cs" />
     <Compile Include="Events\NPCSpawnEvent.cs" />
@@ -262,6 +264,12 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Items.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ItemsByName.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="NPCs.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
