Cleaned up serialization utilities. Projectiles are now deserialized from an xml file.

--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -268,6 +268,9 @@
     <EmbeddedResource Include="Definitions\Items.xml" />
     <EmbeddedResource Include="Definitions\ItemsByName.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Definitions\Projectiles.xml" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
