--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -240,8 +240,8 @@
     <Compile Include="Messages\messageBuffer.cs" />
     <Compile Include="NetPlay.cs" />
     <Compile Include="ServerSlot.cs" />
-    <Compile Include="Server\PacketWriter.cs" />
     <Compile Include="Messages\SendTileRowMessage.cs" />
+    <Compile Include="NetMessage_Packets.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
