Converted all direct, non-method references to NPC.Type to NPCType enum.

--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -115,6 +115,7 @@
   <ItemGroup>
     <Compile Include="BaseEntity.cs" />
     <Compile Include="Commands\ISender.cs" />
+    <Compile Include="Definitions\NPCType.cs" />
     <Compile Include="Definitions\ProjectileType.cs" />
     <Compile Include="Collections\IRegisterableEntity.cs" />
     <Compile Include="Collections\ItemRegistry.cs" />
