--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -114,6 +114,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseEntity.cs" />
+    <Compile Include="Collections\NPCRegistry.cs" />
     <Compile Include="Commands\ISender.cs" />
     <Compile Include="Definitions\NPCType.cs" />
     <Compile Include="Definitions\ProjectileType.cs" />
