--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -114,7 +114,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseEntity.cs" />
-    <Compile Include="Collections\NPCRegistry.cs" />
     <Compile Include="Commands\ISender.cs" />
     <Compile Include="Definitions\NPCType.cs" />
     <Compile Include="Definitions\ProjectileType.cs" />
@@ -268,7 +267,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Definitions\Items.xml" />
-    <EmbeddedResource Include="Definitions\ItemsByName.xml" />
+    <EmbeddedResource Include="Definitions\ItemsByName.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Definitions\Projectiles.xml" />
