--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -239,6 +239,7 @@
     <Compile Include="TileCollection.cs" />
     <Compile Include="Tile.cs" />
     <Compile Include="Events\PlayerFlowLiquidEvent.cs" />
+    <Compile Include="Commands\ArgumentList.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
