WIP: logging,rcon; all this was supposed to be in previous commit

--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -248,6 +248,7 @@
     <Compile Include="RemoteConsole\RConServer.cs" />
     <Compile Include="RemoteConsole\RConClient.cs" />
     <Compile Include="RemoteConsole\RConSender.cs" />
+    <Compile Include="Logging\LogChannel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
