--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -231,6 +231,7 @@
     <Compile Include="Misc\Vector2.cs" />
     <Compile Include="Misc\DataRegister.cs" />
     <Compile Include="Server\World.cs" />
+    <Compile Include="Generation\Generation.cs" />
     <Compile Include="WorldGen.cs" />
     <Compile Include="Messages\messageBuffer.cs" />
     <Compile Include="NetPlay.cs" />
@@ -295,9 +296,5 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <ItemGroup>
-    <Folder Include="Logging\" />
-    <Folder Include="Server\" />
-    <Folder Include="RemoteConsole\" />
-  </ItemGroup>
+  <ItemGroup />
 </Project>
