Oops, forgot to rename to WorldGen.cs and upload said file :P.

--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -231,7 +231,7 @@
     <Compile Include="Misc\Vector2.cs" />
     <Compile Include="Misc\DataRegister.cs" />
     <Compile Include="Server\World.cs" />
-    <Compile Include="Generation\Generation.cs" />
+    <Compile Include="World\WorldGen.cs" />
     <Compile Include="WorldGen.cs" />
     <Compile Include="Messages\messageBuffer.cs" />
     <Compile Include="NetPlay.cs" />
